// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ButtonLink renders a ButtonLink 1`] = `
<div>
  <a
    class="css-1qtub34"
    font-family="default"
    font-size="small,medium"
    href="/test"
  >
    Link text
  </a>
</div>
`;

exports[`components/ButtonLink renders a ButtonLink with props 1`] = `
<div>
  <a
    class="css-dmx7kl"
    font-family="default"
    font-size="medium"
    href="/test"
  >
    Link text
  </a>
</div>
`;
